Lowered language level for further support.
Stopped using newer Java Collection method.

Added work Java formatting.